--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,10 @@ alembic==1.13.2
 beautifulsoup4==4.12.3
 Flask==3.1.0
 Flask_Login==0.6.3
-flask_migrate==4.0.7
+Flask_Login==0.6.3
 flask_sqlalchemy==3.1.1
 python-dotenv==1.0.1
+Requests==2.32.3
 selenium==4.27.1
 SQLAlchemy==2.0.31
 undetected_chromedriver==3.5.5
