--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "compnet"
 version = "0.1.0"
 description = ""
-authors = [" Ivan Ruchkin <rururuchkin@gmail.com>"]
+authors = [" Ivan Ruchkin "]
 readme = "README.md"
 
 [tool.poetry.dependencies]
@@ -17,6 +17,7 @@ requests = "2.32.3"
 selenium = "4.27.1"
 sqlalchemy = "2.0.31"
 werkzeug = "3.1.3"
+flask-migrate = "^4.0.7"
 
 
 [tool.poetry.group.dev.dependencies]
