--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ Flask==3.1.0
 Flask_Login==0.6.3
 Flask_Login==0.6.3
 flask_sqlalchemy==3.1.1
+Flask-Migrate==4.0.7
+flask-ngrok==0.0.25
 python-dotenv==1.0.1
 Requests==2.32.3
 selenium==4.27.1
