--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ selenium = "4.27.1"
 sqlalchemy = "2.0.31"
 werkzeug = "3.1.3"
 flask-migrate = "^4.0.7"
+ngrok = "^1.4.0"
 
 
 [tool.poetry.group.dev.dependencies]
