--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,10 @@ alembic==1.13.2
 beautifulsoup4==4.12.3
 Flask==3.1.0
 Flask_Login==0.6.3
-Flask_Login==0.6.3
+flask_migrate==4.0.7
 flask_sqlalchemy==3.1.1
-Flask-Migrate==4.0.7
-flask-ngrok==0.0.25
+ngrok==1.4.0
+pandas==2.2.3
 python-dotenv==1.0.1
 Requests==2.32.3
 selenium==4.27.1
