--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ sqlalchemy = "2.0.31"
 werkzeug = "3.1.3"
 flask-migrate = "^4.0.7"
 ngrok = "^1.4.0"
+gunicorn = "^23.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
