--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ werkzeug = "3.1.3"
 flask-migrate = "^4.0.7"
 ngrok = "^1.4.0"
 gunicorn = "^23.0.0"
+authlib = "^1.4.0"
 
 
 [tool.poetry.group.dev.dependencies]
